# little_chat_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/srcipts/hook/: commit-msg  pre-commit
.github/template/: ISSUE.md  PR.md
.github/workflow/: main.yml
.github/workflows/: main.yml
client/: CMakeLists.txt  main.cpp
client/include/: client.hpp
client/src/: client.cpp  front_end.cpp  init_logger.cpp
cmake/: FTXUI.cmake
docs/: DEVLOG.md  programming_guide.md
include/: my_logger.hpp  thread_safe_queue.hpp
include/logger/: formater.hpp  logLevel.hpp  my_logger.hpp  record.hpp  sink.hpp
include/server/: server.hpp
lib/: CMakeLists.txt
lib/logger/: CMakeLists.txt
lib/logger/include/: formatter.hpp  logLevel.hpp  logger.hpp  my_logger.hpp  record.hpp  sink.hpp
lib/logger/src/: formatter.cpp  my_logger.cpp  sink.cpp
lib/queue/: CMakeLists.txt  thread_safe_queue.hpp
logger/: CMakeLists.txt
logger/include/: formatter.hpp  my_logger.hpp  sink.hpp
logger/src/: formatter.cpp
server/: CMakeLists.txt
server/include/: Event_handeler.hpp  server.hpp
server/src/: init_logger.cpp  server.cpp
src/: front_end.cpp
src/client/: client.cpp
src/logger/: formater.cpp  my_logger.cpp  sink.cpp
src/server/: server.cpp
test/: CMakeLists.txt  CmakeLists.txt  doctest.h
test/logger/: test_logger.cpp
test/queue/: test_queue.cpp
